# pytorch-project-template

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  build_ui.py  pyproject.toml  pytorch-project-template.pyproject
.github/ISSUE_TEMPLATE/: milestone.md
.github/workflows/: poetry-lock.yml  test.yml
src/: .gitignore  __init__.py  __main__.py  train.py
src/common/: __init__.py  dump.py  profile.py
src/data/: README  __init__.py
src/gui/: dynamic.py  form.ui  main.py  profile.py  torch.py  ui_form.py
src/model/: README  __init__.py
src/wrappers/: __init__.py  dataloader.py  scalars.py  train.py
tests/: README.txt  test_dummy.py
