[tool.poetry]
name = "pytorch-project-template"
version = "0.0.0"
description = "PyTorch Project Template"
authors = ["HuangFuSL <huangfusl@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.1.0"
pylint = "^2.16.2"
isort = "^5.12.0"
autopep8 = "^2.0.1"
poethepoet = "^0.19.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
persistent = false
py-version = "3.10"
recursive = true
suggestion-mode = true


[tool.pylint.basic]
good-names-rgxs = "[a-z]"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.poe.tasks]

[tool.poe.tasks.launch]
help = "Launch the project"
sequence = [{ ref = "compile" }, { cmd = "python -m src" }]

[tool.poe.tasks.compile]
help = "Compile *.ui files"
script = "build_ui:compile()"
